Write event post data to MongoDB

--- a/views/addevent.jade
+++ b/views/addevent.jade
@@ -28,5 +28,6 @@ html(lang="nl")
                                     input(type='text', name='event[title]')
                                 label description
                                     input(type='textarea', name='event[description]')
+                                input(type='submit',value='Add')
                 div.footer 
                     p &copy; nodeblox 2011
