Fixed Jade template

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
 !!! 5
 html(lang='en')
 head
+
+
     //
        Basic Needs 
     meta(charset='utf-8')
@@ -11,12 +13,12 @@ head
     link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,800', rel='stylesheet', type='text/css')
     //
        CSS Stylesheets 
-    link(href='css/bootstrap.css', rel='stylesheet')
-    link(href='css/bootstrap-responsive.css', rel='stylesheet')
-    link(href='css/style.css', rel='stylesheet')
-    link(href='css/font-awesome.css', rel='stylesheet')
-    link(href='css/animate.css', rel='stylesheet')
-    link(href='css/prettyPhoto.css', rel='stylesheet')
+    link(href='css/bootstrap.css', rel='stylesheet', type='text/css')
+    link(href='css/bootstrap-responsive.css', rel='stylesheet', type='text/css')
+    link(href='css/style.css', rel='stylesheet', type='text/css')
+    link(href='css/font-awesome.css', rel='stylesheet', type='text/css')
+    link(href='css/animate.css', rel='stylesheet', type='text/css')
+    link(href='css/prettyPhoto.css', rel='stylesheet', type='text/css')
     //
        Favicon Icon 
     link(rel='shortcut icon', href='ico/favicon.png')
@@ -26,6 +28,7 @@ head
       script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
   body
     //
+
        Start header 
     header.header
       .container
@@ -101,8 +104,8 @@ head
                     a(href='post.html') Single Post
               li
                 a(href='contact.html') Contact
-    //
-       End header 
+body
+
     //
        Start welcome-message 
     section.welcome-message
@@ -410,92 +413,3 @@ head
               li
                 a(href='#')
                   i.icon-google-plus
-    //
-       End socket 
-    //
-       Le javascript
-              ================================================== 
-    //
-       Placed at the end of the document so the pages load faster 
-    script(src='js/jquery-1.8.3.js')
-    script(src='js/bootstrap.min.js')
-    script(src='js/jquery.onecarousel.min.js')
-    script(src='js/jquery.tweet.js')
-    script(src='js/jflickrfeed.min.js')
-    script(src='js/jquery.prettyPhoto.js')
-    script(src='js/jquery.fitvids.js')
-    script(src='js/jquery.isotope.min.js')
-    script(type='text/javascript')
-      $(document).ready(function () {
-      $('#myCarousel').oneCarousel({
-      easeIn: 'rotateIn',
-      interval: 5000,
-      pause: 'hover'
-      });
-      jQuery(function ($) {
-      $(".tweet").tweet({
-      join_text: "auto",
-      username: "wrapbootstrap",
-      avatar_size: 100,
-      count: 2,
-      auto_join_text_default: " we said, ",
-      auto_join_text_ed: " we ",
-      auto_join_text_ing: " we were ",
-      auto_join_text_reply: " we replied ",
-      auto_join_text_url: " we were checking out ",
-      loading_text: "loading tweets..."
-      });
-      });
-      $('.flickr').jflickrfeed({
-      limit: 6,
-      qstrings: {
-      id: '44802888@N04'
-      },
-      itemTemplate:
-      '<li class="span1">' +
-      '<a href="{{image_b}}"><img src="{{image_s}}" alt="{{title}}" /></a>' +
-      '</li>'
-      });
-      var $menu_select = $("<select />");
-      $("<option />", { "selected": "selected", "value": "", "text": "Site Navigation" }).appendTo($menu_select);
-      $menu_select.appendTo(".header .navbar-inner");
-      $(".header .navbar-inner ul li a").each(function () {
-      var menu_url = $(this).attr("href");
-      var menu_text = $(this).text();
-      if ($(this).parents("li").length == 2) { menu_text = '- ' + menu_text; }
-      if ($(this).parents("li").length == 3) { menu_text = "-- " + menu_text; }
-      if ($(this).parents("li").length > 3) { menu_text = "--- " + menu_text; }
-      $("<option />", { "value": menu_url, "text": menu_text }).appendTo($menu_select)
-      });
-      field_id = ".header .navbar-inner select";
-      $(field_id).change(function () {
-      value = $(this).attr('value');
-      window.location = value;
-      //go
-      });
-      // cache container
-      var $container = $('.portfolio .thumbnails');
-      var $filter = $('.portfolio-filter');
-      // initialize isotope
-      $container.isotope({
-      // options...
-      filter: '*'
-      });
-      // filter items when filter link is clicked
-      $('#filters a').click(function () {
-      var selector = $(this).attr('data-filter');
-      $container.isotope({ filter: selector });
-      return false;
-      });
-      // update columnWidth on window resize
-      $(window).smartresize(function () {
-      $container.isotope('reLayout');
-      });
-      // Filter items when filter link is clicked
-      $filter.find('a').click(function () {
-      var selector = $(this).attr('data-filter');
-      $filter.find('a').removeClass('selected');
-      $(this).addClass('selected');
-      });
-      $("a[rel^='prettyPhoto']").prettyPhoto();
-      });
