Restructured public folder

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,12 +13,12 @@ head
     link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,800', rel='stylesheet', type='text/css')
     //
        CSS Stylesheets 
-    link(href='css/bootstrap.css', rel='stylesheet', type='text/css')
-    link(href='css/bootstrap-responsive.css', rel='stylesheet', type='text/css')
+    link(href='lib/bootstrap/css/bootstrap.css', rel='stylesheet', type='text/css')
+    link(href='lib/bootstrap/css/bootstrap-responsive.css', rel='stylesheet', type='text/css')
     link(href='css/style.css', rel='stylesheet', type='text/css')
-    link(href='css/font-awesome.css', rel='stylesheet', type='text/css')
-    link(href='css/animate.css', rel='stylesheet', type='text/css')
-    link(href='css/prettyPhoto.css', rel='stylesheet', type='text/css')
+    link(href='lib/fontawesome/css/font-awesome.css', rel='stylesheet', type='text/css')
+    link(href='lib/animate/css/animate.css', rel='stylesheet', type='text/css')
+    link(href='lib/prettyphoto/css/prettyPhoto.css', rel='stylesheet', type='text/css')
     //
        Favicon Icon 
     link(rel='shortcut icon', href='ico/favicon.png')
@@ -125,17 +125,17 @@ body
           #myCarousel.carousel.slide
             .carousel-inner
               .active.item
-                img(src='images/slides/slide_1.jpg')
+                img(src='img/slides/slide_1.jpg')
                 .carousel-caption.animation
                   h3.caption-black(data-animate='fadeInDownBig') Simple and Clean Design
                   p.caption-black-small(data-animate='fadeInRightBig') Sed posuere consectetur est at lobortis.
               .item
-                img(src='images/slides/slide_2.jpg')
+                img(src='img/slides/slide_2.jpg')
                 .carousel-caption.animation
                   h3.caption-white(data-animate='fadeInLeftBig') Fully Responsive Layout
                   p.caption-white-small(data-animate='fadeInRightBig') Sed posuere consectetur est at lobortis.
               .item
-                img(src='images/slides/slide_3.jpg')
+                img(src='img/slides/slide_3.jpg')
                 .carousel-caption.animation
                   h3.caption-black(data-animate='rotateIn') HTML5 and CSS3 Technology
                   p.caption-black-small(data-animate='rollIn') Sed posuere consectetur est at lobortis.
@@ -207,74 +207,74 @@ body
               li.span3
                 .thumbnail
                   .portfolio-item
-                    img(src='images/portfolio/portfolio_1.jpg', alt='')
+                    img(src='img/portfolio/portfolio_1.jpg', alt='')
                     .folio-body
                       .folio-info
                         h5
                           a(href='#') Awesome Building
                         p Digital Art | Illustration
                       .folio-zoom
-                        a(href='images/portfolio/portfolio_1.jpg', rel='prettyPhoto[pp_gal]')
+                        a(href='img/portfolio/portfolio_1.jpg', rel='prettyPhoto[pp_gal]')
                           i.icon-plus
               li.span3
                 .thumbnail
                   .portfolio-item
-                    img(src='images/portfolio/portfolio_2.jpg', alt='')
+                    img(src='img/portfolio/portfolio_2.jpg', alt='')
                     .folio-body
                       .folio-info
                         h5
                           a(href='#') Girl in the Forest
                         p Art Direction | Illustration
                       .folio-zoom
-                        a(href='images/portfolio/portfolio_2.jpg', rel='prettyPhoto[pp_gal]')
+                        a(href='img/portfolio/portfolio_2.jpg', rel='prettyPhoto[pp_gal]')
                           i.icon-plus
               li.span3
                 .thumbnail
                   .portfolio-item
-                    img(src='images/portfolio/portfolio_3.jpg', alt='')
+                    img(src='img/portfolio/portfolio_3.jpg', alt='')
                     .folio-body
                       .folio-info
                         h5
                           a(href='#') Girl in the House
                         p Digital Art | Photography
                       .folio-zoom
-                        a(href='images/portfolio/portfolio_3.jpg', rel='prettyPhoto[pp_gal]')
+                        a(href='img/portfolio/portfolio_3.jpg', rel='prettyPhoto[pp_gal]')
                           i.icon-plus
               li.span3
                 .thumbnail
                   .portfolio-item
-                    img(src='images/portfolio/portfolio_4.jpg', alt='')
+                    img(src='img/portfolio/portfolio_4.jpg', alt='')
                     .folio-body
                       .folio-info
                         h5
                           a(href='#') Lovely Deer
                         p Nature | Photography
                       .folio-zoom
-                        a(href='images/portfolio/portfolio_4.jpg', rel='prettyPhoto[pp_gal]')
+                        a(href='img/portfolio/portfolio_4.jpg', rel='prettyPhoto[pp_gal]')
                           i.icon-plus
               li.span3
                 .thumbnail
                   .portfolio-item
-                    img(src='images/portfolio/portfolio_5.jpg', alt='')
+                    img(src='img/portfolio/portfolio_5.jpg', alt='')
                     .folio-body
                       .folio-info
                         h5
                           a(href='#') Cute Girl
                         p Design | Creative
                       .folio-zoom
-                        a(href='images/portfolio/portfolio_5.jpg', rel='prettyPhoto[pp_gal]')
+                        a(href='img/portfolio/portfolio_5.jpg', rel='prettyPhoto[pp_gal]')
                           i.icon-plus
               li.span3
                 .thumbnail
                   .portfolio-item
-                    img(src='images/portfolio/portfolio_6.jpg', alt='')
+                    img(src='img/portfolio/portfolio_6.jpg', alt='')
                     .folio-body
                       .folio-info
                         h5
                           a(href='#') A Lonely Girl
                         p Photography | Art
                       .folio-zoom
-                        a(href='images/portfolio/portfolio_6.jpg', rel='prettyPhoto[pp_gal]')
+                        a(href='img/portfolio/portfolio_6.jpg', rel='prettyPhoto[pp_gal]')
                           i.icon-plus
     //
        End portfolio 
@@ -299,27 +299,27 @@ body
               .span3
                 .well
                   a(href='#')
-                    img(src='images/partners/partner_1.jpg')
+                    img(src='img/partners/partner_1.jpg')
               .span3
                 .well
                   a(href='#')
-                    img(src='images/partners/partner_2.jpg')
+                    img(src='img/partners/partner_2.jpg')
               .span3
                 .well
                   a(href='#')
-                    img(src='images/partners/partner_3.jpg')
+                    img(src='img/partners/partner_3.jpg')
               .span3
                 .well
                   a(href='#')
-                    img(src='images/partners/partner_4.jpg')
+                    img(src='img/partners/partner_4.jpg')
               .span3
                 .well
                   a(href='#')
-                    img(src='images/partners/partner_5.jpg')
+                    img(src='img/partners/partner_5.jpg')
               .span3
                 .well
                   a(href='#')
-                    img(src='images/partners/partner_6.jpg')
+                    img(src='img/partners/partner_6.jpg')
     //
        End clients 
     //
@@ -354,7 +354,7 @@ body
                 .row
                   .span1
                     a(href='#')
-                      img(src='images/round/magic-landscape.jpg', alt='')
+                      img(src='img/round/magic-landscape.jpg', alt='')
                   .recent-body
                     a(href='#') Erat nisl faucibus justo verit et quasi architecto beatae.
                     br
@@ -364,7 +364,7 @@ body
                 .row
                   .span1
                     a(href='#')
-                      img(src='images/round/shopping-high-heels.jpg', alt='')
+                      img(src='img/round/shopping-high-heels.jpg', alt='')
                   .recent-body
                     a(href='#') Ut semper porttitor ipsum, et cursus erat volutpat vitae.
                     br
@@ -374,7 +374,7 @@ body
                 .row
                   .span1
                     a(href='#')
-                      img(src='images/round/nettle-tea.jpg', alt='')
+                      img(src='img/round/nettle-tea.jpg', alt='')
                   .recent-body
                     a(href='#') Mauris porttitor nisi sit amet felis porta congue.
                     br
@@ -414,14 +414,14 @@ body
                 a(href='#')
                   i.icon-google-plus
 
-    script(src='js/jquery-1.8.3.js')
+    script(src='lib/jquery/js/jquery-1.8.3.js')
     script(src='lib/bootstrap/js/bootstrap.min.js')
-    script(src='js/jquery.onecarousel.min.js')
-    script(src='js/jquery.tweet.js')
-    script(src='js/jflickrfeed.min.js')
-    script(src='js/jquery.prettyPhoto.js')
-    script(src='js/jquery.fitvids.js')
-    script(src='js/jquery.isotope.min.js')
+    script(src='lib/onecarousel/js/jquery.onecarousel.min.js')
+    script(src='lib/tweet/js/jquery.tweet.js')
+    script(src='lib/jflickrfeed/js/jflickrfeed.min.js')
+    script(src='lib/prettyphoto/js/jquery.prettyPhoto.js')
+    script(src='lib/fitvids/js/jquery.fitvids.js')
+    script(src='lib/isotope/js/jquery.isotope.min.js')
 
     script(type='text/javascript')
       $(document).ready(function () {
