added routing for static about page

--- a/views/about.jade
+++ b/views/about.jade
@@ -1,14 +1,14 @@
 extends template
 block content
-     //
+    //
        Start page header 
     section.section-page-header
       .container
         .row
           .span12
             .page-header
-              h4 — ABOUT US - LAYOUT 1 —
-        img(src='images/divider_shadow.png', title='', alt='')
+              h4 - ABOUT US - LAYOUT 1 -
+        img(src='img/divider_shadow.png', title='', alt='')
     //
        End page header 
     //
@@ -37,7 +37,7 @@ block content
             .row.member-container
               .span3.team-member
                 .img-polaroid
-                  img(src='images/people/people_1.jpg')
+                  img(src='img/people/people_1.jpg')
                 h5
                   | Albert Dowson
                   small The Manager
@@ -60,7 +60,7 @@ block content
                       a.social_6(href='#') Social Service 6
               .span3.team-member
                 .img-polaroid
-                  img(src='images/people/people_2.jpg')
+                  img(src='img/people/people_2.jpg')
                 h5
                   | Roxana Huamani Arce
                   small Content Creator
@@ -83,7 +83,7 @@ block content
                       a.social_6(href='#') Social Service 6
               .span3.team-member
                 .img-polaroid
-                  img(src='images/people/people_3.jpg')
+                  img(src='img/people/people_3.jpg')
                 h5
                   | Sara Patrick
                   small Moderator
@@ -106,7 +106,7 @@ block content
                       a.social_6(href='#') Social Service 6
               .span3.team-member
                 .img-polaroid
-                  img(src='images/people/people_4.jpg')
+                  img(src='img/people/people_4.jpg')
                 h5
                   | Sheikh Rony
                   small Web Developer
