--- a/controllers/event/views/edit.jade
+++ b/controllers/event/views/edit.jade
@@ -1,4 +1,4 @@
-h1= Edit event
+h1 Edit event
 form(action='/event/#{event.id}', method='post')
   input(type='hidden', name='_method', value='put')
   label Title: 
