--- a/controllers/event/views/list.jade
+++ b/controllers/event/views/list.jade
@@ -1,1 +1,5 @@
-h1 Events
+extends event_template
+block content
+  h1 Events
+  <a href="http://devnology.nl">Devnologysite</a>
+  <b>Vet</b>Niet vet
