--- a/views/contentfooter.jade
+++ b/views/contentfooter.jade
@@ -30,7 +30,7 @@
                 .row
                   .span1
                     a(href='#')
-                      img(src='images/round/magic-landscape.jpg', alt='')
+                      img(src='/img/round/magic-landscape.jpg', alt='')
                   .recent-body
                     a(href='#') Erat nisl faucibus justo verit et quasi architecto beatae.
                     br
@@ -40,7 +40,7 @@
                 .row
                   .span1
                     a(href='#')
-                      img(src='images/round/shopping-high-heels.jpg', alt='')
+                      img(src='/img/round/shopping-high-heels.jpg', alt='')
                   .recent-body
                     a(href='#') Ut semper porttitor ipsum, et cursus erat volutpat vitae.
                     br
@@ -50,7 +50,7 @@
                 .row
                   .span1
                     a(href='#')
-                      img(src='images/round/nettle-tea.jpg', alt='')
+                      img(src='/img/round/nettle-tea.jpg', alt='')
                   .recent-body
                     a(href='#') Mauris porttitor nisi sit amet felis porta congue.
                     br
