--- a/views/contentheader.jade
+++ b/views/contentheader.jade
@@ -7,12 +7,12 @@ head
 
     //
        CSS Stylesheets 
-    link(href='lib/bootstrap/css/bootstrap.css', rel='stylesheet', type='text/css')
-    link(href='lib/bootstrap/css/bootstrap-responsive.css', rel='stylesheet', type='text/css')
-    link(href='css/style.css', rel='stylesheet', type='text/css')
-    link(href='lib/fontawesome/css/font-awesome.css', rel='stylesheet', type='text/css')
-    link(href='lib/animate/css/animate.css', rel='stylesheet', type='text/css')
-    link(href='lib/prettyphoto/css/prettyPhoto.css', rel='stylesheet', type='text/css')
+    link(href='/lib/bootstrap/css/bootstrap.css', rel='stylesheet', type='text/css')
+    link(href='/lib/bootstrap/css/bootstrap-responsive.css', rel='stylesheet', type='text/css')
+    link(href='/css/style.css', rel='stylesheet', type='text/css')
+    link(href='/lib/fontawesome/css/font-awesome.css', rel='stylesheet', type='text/css')
+    link(href='/lib/animate/css/animate.css', rel='stylesheet', type='text/css')
+    link(href='/lib/prettyphoto/css/prettyPhoto.css', rel='stylesheet', type='text/css')
     //
        Favicon Icon 
     link(rel='shortcut icon', href='ico/favicon.png')
@@ -30,8 +30,7 @@ head
           .navbar-inner
             .brand-wrapper
               a.brand(href='index.html')
-                | ROUN
-                span DE
+                img(src='/img/devnology.png', alt='', width='350px', heigth='79px')
             ul.nav
               li.active
                 a(href='index.html') Home
