--- a/views/template.jade
+++ b/views/template.jade
@@ -1,7 +1,8 @@
 html
     head
       block scripts
-        scripts(src='/jquery.js;)
+        scripts(src='/lib/jquery/js/jquery-1.8.3.js')
+        scripts(src='/lib/bootstrap/js/bootstrap.js')
     body
       include contentheader
       block content
