--- a/views/about.jade
+++ b/views/about.jade
@@ -7,8 +7,8 @@ block content
         .row
           .span12
             .page-header
-              h4 - ABOUT US - LAYOUT 1 -
-        img(src='img/divider_shadow.png', title='', alt='')
+              h4 - ABOUT DEVNOLOGY - 
+        img(src='/img/divider_shadow.png', title='', alt='')
     //
        End page header 
     //
@@ -19,7 +19,7 @@ block content
           .span8
             h4 Our Mission
             p
-              | Suspendisse vitae libero justo. Integer eu dui nulla. Duis in risus elit, ac vulputate purus. Quisque porttitor luctus risus ac pharetra. Donec pharetra, lectus nec dignissim pharetra, leo felis dapibus nunc, eu laoreet lorem nibh quis libero. Nulla facilisi. Sed pulvinar sem nec tortor congue dictum sed non nibh. Nam condimentum ante sed tellus dictum non feugiat purus imperdiet. Proin arcu tellus, placerat facilisis rhoncus eget, mollis ac erat. Donec accumsan erat in elit condimentum dictum pharetra est molestie. Donec eget felis in ligula bibendum gravida consectetur at dolor. Nam condimentum ante sed tellus dictum non feugiat purus imperdiet. Proin arcu tellus, placerat facilisis rhoncus eget, mollis ac erat. Donec accumsan erat in elit condimentum dictum pharetra est molestie. Donec eget felis in ligula bibendum gravida consectetur at dolor.
+              | Devnology aims to provide the Dutch software development community with opportunities to exchange knowledge and experience. We aim to bridge the gap between theory and practice of software development. To fullfill this mission we aim to bring together a group of developers on a regular basis. On these meetings we want to explore new and exciting technologies, as well as exchange experience with existing technologies. We will generally not focus on a single platform or language, but rather explore the differences between these and look at general concepts of software engineering. We will sometimes invite experts, but more often we'll try to learn from each other. The Devnology meetings are for developers who are passionate about software development and want to gain and exchange knowledge and experience.
           .span4
             .well.info-box
               h4 We Are Hiring !
@@ -31,101 +31,46 @@ block content
                   | Apply Now
           .span12
             hr
-            h4 Meet The Team
+            h4 Board
             p
-              | Nullam egestas nulla rutrum lorem varius nec faucibus est fringilla. Quisque at urna vel leo tincidunt rutrum vitae at enim. Duis ac mi nulla. Sed convallis lobortis vulputate. Etiam feugiat sapien vel felis scelerisque dapibus. Curabitur dictum massa id urna imperdiet eu blandit dolor faucibus. Fusce eu lobortis sem. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh eui smod tincidunt ut laor.
+              | 
             .row.member-container
               .span3.team-member
                 .img-polaroid
-                  img(src='img/people/people_1.jpg')
+                  img(src='/img/people/Freek.jpg')
                 h5
-                  | Albert Dowson
-                  small The Manager
+                  | Freek Leemhuis
+                  small Chairman
                 hr
                 p
-                  | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh eui smod tincidunt ut laor.
-                .block_general_social_1
-                  ul
-                    li
-                      a.social_1(href='#') Social Service 1
-                    li
-                      a.social_2(href='#') Social Service 2
-                    li
-                      a.social_3(href='#') Social Service 3
-                    li
-                      a.social_4(href='#') Social Service 4
-                    li
-                      a.social_5(href='#') Social Service 5
-                    li
-                      a.social_6(href='#') Social Service 6
+                  | Freek Leemhuis is an independant consultant and develops software in roles as  developer, designer and architect. He is passionate about quality in software development and is interested in approaches such as Domain Driven Design and Agile practices. His site is on http://outerjoins.com and he sometimes blogs on http://freekleemhuis.com/. Contact freek through freek@devnology.nl or via twitter: @freekl
               .span3.team-member
                 .img-polaroid
-                  img(src='img/people/people_2.jpg')
+                  img(src='/img/people/PJ.jpg')
                 h5
-                  | Roxana Huamani Arce
-                  small Content Creator
+                  | Pieter Joost van der Sande
+                  small Vice Chairman
                 hr
                 p
-                  | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh eui smod tincidunt ut laor.
+                  | Pieter Joost is a consultant with Atos and specializes in software architecture, usually applying Domain Driven Design. Apart from programming he is passionate about sharing knowledge and is a regular speaker on events, schools and corporate gatherings. For his contribution to the .NET community he has received the Microsoft C# MVP award in 2007, 2008 en 2009. You can find his blog on http://www.born2code.net/. PJ's email address is pieterjoost@devnology.nl, you'll find him on twitter via @pjvds
                 .block_general_social_1
-                  ul
-                    li
-                      a.social_1(href='#') Social Service 1
-                    li
-                      a.social_2(href='#') Social Service 2
-                    li
-                      a.social_3(href='#') Social Service 3
-                    li
-                      a.social_4(href='#') Social Service 4
-                    li
-                      a.social_5(href='#') Social Service 5
-                    li
-                      a.social_6(href='#') Social Service 6
               .span3.team-member
                 .img-polaroid
-                  img(src='img/people/people_3.jpg')
+                  img(src='/img/people/Arne.jpg')
                 h5
-                  | Sara Patrick
-                  small Moderator
+                  | Arne Timmerman
+                  small Secretary
                 hr
                 p
-                  | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh eui smod tincidunt ut laor.
+                  | Arne is a software engineer working at Finalist. He is a Java software developer, proponent of Agile practices and passionate about all aspects of a software process. It is his personal goal to face the 'software challenge' of making software that has great value for customers, by focusing on lean principles and a domain-driven approach on designing software. Contact Arne via e-mail arne@devnology.nl or on twitter @arnetim
                 .block_general_social_1
-                  ul
-                    li
-                      a.social_1(href='#') Social Service 1
-                    li
-                      a.social_2(href='#') Social Service 2
-                    li
-                      a.social_3(href='#') Social Service 3
-                    li
-                      a.social_4(href='#') Social Service 4
-                    li
-                      a.social_5(href='#') Social Service 5
-                    li
-                      a.social_6(href='#') Social Service 6
               .span3.team-member
                 .img-polaroid
-                  img(src='img/people/people_4.jpg')
+                  img(src='/img/people/Felienne.jpg')
                 h5
-                  | Sheikh Rony
-                  small Web Developer
+                  | Felienne Hermans
+                  small General Board Member
                 hr
                 p
-                  | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh eui smod tincidunt ut laor.
-                .block_general_social_1
-                  ul
-                    li
-                      a.social_1(href='#') Social Service 1
-                    li
-                      a.social_2(href='#') Social Service 2
-                    li
-                      a.social_3(href='#') Social Service 3
-                    li
-                      a.social_4(href='#') Social Service 4
-                    li
-                      a.social_5(href='#') Social Service 5
-                    li
-                      a.social_6(href='#') Social Service 6
-    //
+                  | Felienne is a PhD student and an entrepreneur in the field of spreadsheets. She is passionate about supporting spreadsheet developers with technology similar to software developers, like visualization, debugging and metrics. In 2010 Felienne founded Infotron, a start up that uses the algorithms developed during the PhD project to analyze spreadsheet quality for large companies. In her spare time, Felienne volunteers as a judge for the First Lego League. She can be contacted through felienne@devnology.nl and on twitter through @felienne
        End about us 
