Improve event editing

--- a/controllers/event/views/add.jade
+++ b/controllers/event/views/add.jade
@@ -1,7 +1,15 @@
-h1 Create event
-form(action='/event', method='post')
-  label Title: 
-    input(type='text', name='event[title]', value=event.name)
-  label Content:
-    input(type='textarea', name='event[content]', value=event.content)
-  input(type='submit', value='Update')
+extends event_template
+block content
+  h1 Create event
+  form(action='/event', method='post')
+    fieldset
+      legend Details
+      label Title: 
+        input(type='text', name='event[title]', value=event.title)
+      label Content:
+        input(type='textarea', name='event[content]', value=event.content)
+      label Start:
+        input(type='datetime', name='event[start]', value=event.start)
+      label End:
+        input(type='datetime', name='event[end]', value=event.end)
+      input(type='submit', value='Add')
