Added title tag - TODO needs to be context aware

--- a/controllers/event/views/event_template.jade
+++ b/controllers/event/views/event_template.jade
@@ -1,5 +1,6 @@
 html
     head
+      title Devnology 
       block scripts
         scripts(src='/lib/jquery/js/jquery-1.8.3.js')
         scripts(src='/lib/bootstrap/js/bootstrap.js')    
