--- a/controllers/event/views/list.jade
+++ b/controllers/event/views/list.jade
@@ -6,12 +6,12 @@ block content
             tr
                 th id
                 th title
-                th date
+                th start
                 th edit
         tbody
             each e in events
               tr
                 td=e._id
                 td=e.title
-                td=e.date
-                td: a(href='/event/#{e._id}/edit') edit
+                td=e.start
+                td: a.btn(href='/event/#{e._id}/edit') edit
