--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,6 @@
 html
     head
+      title Devnology - Community Driven Development
       block scripts
         scripts(src='/jquery.js;)
     body
