--- a/views/contentfooter.jade
+++ b/views/contentfooter.jade
@@ -6,62 +6,23 @@
           .span3.about
             h5 About Us
             p
-              | Lorem ipsum dolor sit amet nec, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+              | Devnology aims to provide the Dutch software development community with opportunities to exchange knowledge and experience. We aim to bridge the gap between theory and practice of software development.
             dl
-              dt Our Office:
-              dd
-                strong Rounde Inc.
-                br
-                | 795 Folsom Ave, Suite 600
-                br
-                | San Francisco, CA 94107
-              dt Telephone:
-              dd
-                | +1 0198 432 4567
-                br
-                | +1 0198 432 4567
               dt E-mail:
               dd
-                a(href='mailto:mail@domain.com') mail@domain.com
+                a(href='mailto:info@devnology.nl') info@devnology.nl
           .span3.recent-post
             h5 Recent Posts
             ul
-              li
-                .row
-                  .span1
-                    a(href='#')
-                      img(src='/img/round/magic-landscape.jpg', alt='')
-                  .recent-body
-                    a(href='#') Erat nisl faucibus justo verit et quasi architecto beatae.
-                    br
-                    em
-                      small January 11, 2012 - 1:13 PM
-              li
-                .row
-                  .span1
-                    a(href='#')
-                      img(src='/img/round/shopping-high-heels.jpg', alt='')
-                  .recent-body
-                    a(href='#') Ut semper porttitor ipsum, et cursus erat volutpat vitae.
-                    br
-                    em
-                      small January 12, 2012 - 1:13 PM
-              li
-                .row
-                  .span1
-                    a(href='#')
-                      img(src='/img/round/nettle-tea.jpg', alt='')
-                  .recent-body
-                    a(href='#') Mauris porttitor nisi sit amet felis porta congue.
-                    br
-                    em
-                      small January 13, 2012 - 1:13 PM
           .span3.twitter-widget
             h5 Latest Tweets
-            .tweet
+              p
+              <a class="twitter-timeline" href="https://twitter.com/search?q=devnology" data-widget-id="292969766904283136">Tweets about "devnology"</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           .span3.flickr-widget
             h5 Flickr Photos
-            ul.flickr.thumbnails
+              p
+              <!-- Start of Flickr Badge --> <style type="text/css"> #flickr_badge_source_txt {padding:0; font: 11px Arial, Helvetica, Sans serif; color:#666666;} #flickr_badge_icon {display:block !important; margin:0 !important; border: 1px solid rgb(0, 0, 0) !important;} #flickr_icon_td {padding:0 5px 0 0 !important;} .flickr_badge_image {text-align:center !important;} .flickr_badge_image img {border: 1px solid black !important;} #flickr_badge_uber_wrapper {width:150px;} #flickr_www {display:block; text-align:center; padding:0 10px 0 10px !important; font: 11px Arial, Helvetica, Sans serif !important; color:#3993ff !important;} #flickr_badge_uber_wrapper a:hover, #flickr_badge_uber_wrapper a:link, #flickr_badge_uber_wrapper a:active, #flickr_badge_uber_wrapper a:visited {text-decoration:none !important; background:inherit !important;color:#3993ff;} #flickr_badge_wrapper {} #flickr_badge_source {padding:0 !important; font: 11px Arial, Helvetica, Sans serif !important; color:#666666 !important;} </style> <table id="flickr_badge_uber_wrapper" cellpadding="0" cellspacing="10" border="0"><tr><td><table cellpadding="0" cellspacing="10" border="0" id="flickr_badge_wrapper"> <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?show_name=1&count=3&display=random&size=s&layout=v&source=user&user=37042792%40N03"></script> <tr> <td id="flickr_badge_source" valign="center" align="center"> <table cellpadding="0" cellspacing="0" border="0"><tr> <td width="10" id="flickr_icon_td"><a href="http://www.flickr.com/photos/devnology/"><img id="flickr_badge_icon" alt="Devnology's items" src="http://farm4.staticflickr.com/3312/buddyicons/37042792@N03.jpg?1238834916#37042792@N03" align="left" width="48" height="48"></a></td> <td id="flickr_badge_source_txt"><nobr>Go to</nobr> <a href="http://www.flickr.com/photos/devnology/">Devnology's photostream</a></td> </tr></table> </td> </tr> </table> </td></tr></table> <!-- End of Flickr Badge --> 
+
     //
        End footer 
     //
